--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sea",
+  "name": "seatSelected",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "zhangchan <zhangchan@lsrobot.vip>",
